istio/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: main-routing
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - nginx-gateway
  http:
  - match:
    - uri:
        prefix: /node
    route:
    - destination:
        host: node-app.default.svc.cluster.local
        subset: v1
        port:
          number: 80
      weight: 80
    - destination:
        host: node-app.default.svc.cluster.local
        subset: v2
        port:
          number: 80
      weight: 20
  - route:
    - destination:
        host: nginx-app-nginx-chart.default.svc.cluster.local
        port:
          number: 80
