istio/allow-only-test.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-only-test
  namespace: default
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx-chart
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/default/sa/default
        - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
